# mid_term_project_PC

./: .RData  .Rhistory  CMakeLists.txt  README  Script_R.R  Table.txt  Table_latx.txt
Include/: utils.cpp  utils.h
Resources/: boxes3.csv  dati.csv
bib/: ESL.bib  Zamora.bib
saved/: speedup.csv
saved/DatasetKaggle/: output.csv  speedup.csv
saved/DatasetNew/: output.csv  speedup.csv
saved/K10N10000/: new_cluster_k_10_N_10000.csv  output.csv  speedup.csv
saved/K10N100000/: new_cluster_k_10_N_100000.csv  output.csv  speedup.csv
saved/K10N1000000/: speedup.csv
saved/K20N10000/: new_cluster_k_20_N_10000.csv  output.csv  speedup.csv
saved/K20N100000/: new_cluster_k_20_N_100000.csv  output.csv  speedup.csv
saved/K20N1000000/: speedup.csv
saved/K40N10000/: new_cluster_k_40_N_10000.csv  output.csv  speedup.csv
saved/K40N100000/: new_cluster_k_40_N_100000.csv  output.csv  speedup.csv
saved/K40N1000000/: speedup.csv
src/: main.cpp
